; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_platform-nix.c_os_globfree.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_platform-nix.c_os_globfree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.posix_glob_info = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { %struct.posix_glob_info* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @os_globfree(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.posix_glob_info*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = icmp ne i32* %4, null
  br i1 %5, label %6, label %19

6:                                                ; preds = %1
  %7 = load i32*, i32** %2, align 8
  %8 = bitcast i32* %7 to %struct.posix_glob_info*
  store %struct.posix_glob_info* %8, %struct.posix_glob_info** %3, align 8
  %9 = load %struct.posix_glob_info*, %struct.posix_glob_info** %3, align 8
  %10 = getelementptr inbounds %struct.posix_glob_info, %struct.posix_glob_info* %9, i32 0, i32 1
  %11 = call i32 @globfree(i32* %10)
  %12 = load %struct.posix_glob_info*, %struct.posix_glob_info** %3, align 8
  %13 = getelementptr inbounds %struct.posix_glob_info, %struct.posix_glob_info* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load %struct.posix_glob_info*, %struct.posix_glob_info** %14, align 8
  %16 = call i32 @bfree(%struct.posix_glob_info* %15)
  %17 = load %struct.posix_glob_info*, %struct.posix_glob_info** %3, align 8
  %18 = call i32 @bfree(%struct.posix_glob_info* %17)
  br label %19

19:                                               ; preds = %6, %1
  ret void
}

declare dso_local i32 @globfree(i32*) #1

declare dso_local i32 @bfree(%struct.posix_glob_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
